# tauri-plugin-biometric

./: Cargo.toml  build.rs  package.json
android/src/main/java/: BiometricPlugin.kt
guest-js/: index.ts
ios/Sources/: BiometricPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
