[package]
name = "tauri-plugin-biometric"
version = "0.1.4"
authors = [ "You" ]
description = "Prompt the user for biometric authentication on Android and iOS."
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-biometric"

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }

[dependencies]
tauri = { version = "2.7.0" }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2"
log = "0.4"
